--- a/build.gradle
+++ b/build.gradle
@@ -3,16 +3,16 @@ buildscript {
     ext {
         lifecycleVersion = "2.3.0"
         navigationVersion = "2.3.4"
-        kotlinVersion= "1.4.31"
+        kotlinVersion= "1.5.21"
     }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.2'
+        classpath 'com.android.tools.build:gradle:7.0.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
