--- a/SmartAndroid/build.gradle
+++ b/SmartAndroid/build.gradle
@@ -12,7 +12,7 @@ afterEvaluate {
                 // Applies the component for the release build variant.
                 from components.release
                         // You can then customize attributes of the publication as shown below.
-                        groupId = 'com.luckyaf.androidhelper'
+                        groupId = 'com.github.luckyaf'
                 artifactId = 'SmartAndroid'
                 version = 'v1.0.2'
             }
@@ -48,21 +48,21 @@ android{
 }
 
 dependencies {
-    api "org.jetbrains.kotlin:kotlin-stdlib:1.5.21"
-    api "androidx.core:core-ktx:1.3.1"
-    api "androidx.appcompat:appcompat:1.2.0"
-    api "com.google.android.material:material:1.2.0"
-    api "com.google.code.gson:gson:2.8.6"
-    api "androidx.constraintlayout:constraintlayout:1.1.3"
-    api "androidx.lifecycle:lifecycle-livedata:2.2.0"
-    api "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
-    api "androidx.navigation:navigation-runtime:2.2.0"
-    api "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
-    api "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
-    api "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.2.0"
-    api "androidx.lifecycle:lifecycle-common-java8:2.2.0"
+    api "org.jetbrains.kotlin:kotlin-stdlib:1.5.31"
+    api "androidx.core:core-ktx:1.5.0"
+    api "androidx.appcompat:appcompat:1.3.1"
+    api "com.google.android.material:material:1.4.0"
+    api "com.google.code.gson:gson:2.8.7"
+    api "androidx.constraintlayout:constraintlayout:2.0.4"
+    api "androidx.lifecycle:lifecycle-livedata:2.3.1"
+    api "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
+    api "androidx.navigation:navigation-runtime:2.3.5"
+    api "androidx.lifecycle:lifecycle-viewmodel:2.3.1"
+    api "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+    api "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.1"
+    api "androidx.lifecycle:lifecycle-common-java8:2.3.1"
     api "com.kunminx.arch:unpeek-livedata:7.2.0-beta1"
-    testImplementation "junit:junit:4.13"
-    androidTestImplementation "androidx.test.ext:junit:1.1.1"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0"
+    testImplementation "junit:junit:4.13.2"
+    androidTestImplementation "androidx.test.ext:junit:1.1.2"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
 }
