--- a/SmartAndroid/build.gradle
+++ b/SmartAndroid/build.gradle
@@ -41,6 +41,11 @@ android{
         sourceCompatibility = JavaVersion.VERSION_11
         targetCompatibility = JavaVersion.VERSION_11
     }
+
+    buildFeatures {
+        dataBinding true
+    }
+
     kotlinOptions {
         jvmTarget = '11'
         useIR = true
