--- a/SmartAndroid/build.gradle
+++ b/SmartAndroid/build.gradle
@@ -63,11 +63,13 @@ dependencies {
     api "androidx.lifecycle:lifecycle-livedata:2.3.1"
     api "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
     api "androidx.navigation:navigation-runtime:2.3.5"
+    api "androidx.navigation:navigation-runtime-ktx:2.3.5"
     api "androidx.lifecycle:lifecycle-viewmodel:2.3.1"
     api "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
     api "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.1"
     api "androidx.lifecycle:lifecycle-common-java8:2.3.1"
     api "com.kunminx.arch:unpeek-livedata:7.2.0-beta1"
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.2"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
