--- a/SmartAndroid/build.gradle
+++ b/SmartAndroid/build.gradle
@@ -62,7 +62,7 @@ dependencies {
     api "androidx.constraintlayout:constraintlayout:2.0.4"
     api "androidx.lifecycle:lifecycle-livedata:2.3.1"
     api "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
-    api "androidx.navigation:navigation-runtime:2.3.5"
+    compile "androidx.navigation:navigation-runtime:2.3.5"
     api "androidx.navigation:navigation-runtime-ktx:2.3.5"
     api "androidx.lifecycle:lifecycle-viewmodel:2.3.1"
     api "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
